force-app/main/default/objects/PurchaseOpportunityWork__c/PurchaseOpportunityWork__c.object-meta.xml
<CustomObject>
    <label>買取商談（ワーク）</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>買取商談（ワーク）No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>