force-app/main/default/objects/PurchaseOpportunityWork__c/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <label>査定日</label>
    <type>Date</type>
</CustomField>