force-app/main/default/objects/PurchaseOpportunityWork__c/fields/AssessmentUser__c.field-meta.xml
<CustomField>
    <fullName>AssessmentUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>査定担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssessmentWorkUser</relationshipName>
    <type>Lookup</type>
</CustomField>