force-app/main/default/objects/PurchaseOpportunityWork__c/fields/BeforeContact__c.field-meta.xml
<CustomField>
    <fullName>BeforeContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>引取前連絡</label>
    <type>Checkbox</type>
</CustomField>