force-app/main/default/objects/PurchaseOpportunityWork__c/fields/ByRecyclingFee__c.field-meta.xml
<CustomField>
    <fullName>ByRecyclingFee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リサイクル料金別</label>
    <type>Checkbox</type>
</CustomField>