force-app/main/default/objects/PurchaseOpportunityWork__c/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>キャンセル理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>