force-app/main/default/objects/PurchaseOpportunityWork__c/fields/CarExhibition__c.field-meta.xml
<CustomField>
    <fullName>CarExhibition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出品票</label>
    <type>Checkbox</type>
</CustomField>