force-app/main/default/objects/PurchaseOpportunityWork__c/fields/CarryDate__c.field-meta.xml
<CustomField>
    <fullName>CarryDate__c</fullName>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>