force-app/main/default/objects/PurchaseOpportunityWork__c/fields/CollectionDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionDate__c</fullName>
    <label>書類到着予定日</label>
    <type>Date</type>
</CustomField>