force-app/main/default/objects/PurchaseOpportunityWork__c/fields/ContractOK__c.field-meta.xml
<CustomField>
    <fullName>ContractOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>売買契約書・注文書取付OK</label>
    <type>Checkbox</type>
</CustomField>