force-app/main/default/objects/PurchaseOpportunityWork__c/fields/CorporationID__c.field-meta.xml
<CustomField>
    <fullName>CorporationID__c</fullName>
    <externalId>true</externalId>
    <label>法人ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>