force-app/main/default/objects/PurchaseOpportunityWork__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>書類回収方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>