force-app/main/default/objects/PurchaseOpportunityWork__c/fields/DocumentOK__c.field-meta.xml
<CustomField>
    <fullName>DocumentOK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>本社書類OK</label>
    <type>Checkbox</type>
</CustomField>