force-app/main/default/objects/PurchaseOpportunityWork__c/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>経理へFAX・提出</label>
    <type>Checkbox</type>
</CustomField>