force-app/main/default/objects/PurchaseOpportunityWork__c/fields/GrossProfitForecast__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitForecast__c</fullName>
    <label>粗利予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>