force-app/main/default/objects/PurchaseOpportunityWork__c/fields/IFContact__c.field-meta.xml
<CustomField>
    <fullName>IFContact__c</fullName>
    <label>連携用担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>