force-app/main/default/objects/PurchaseOpportunityWork__c/fields/LoginSystem__c.field-meta.xml
<CustomField>
    <fullName>LoginSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ログインシステム</label>
    <type>Checkbox</type>
</CustomField>