force-app/main/default/objects/PurchaseOpportunityWork__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出品メール送信済</label>
    <type>Checkbox</type>
</CustomField>