force-app/main/default/objects/PurchaseOpportunityWork__c/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <label>年式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>