force-app/main/default/objects/PurchaseOpportunityWork__c/fields/Mst_Models__c.field-meta.xml
<CustomField>
    <fullName>Mst_Models__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>買取商談（ワーク）</relationshipLabel>
    <relationshipName>PurchaseOpportunity2</relationshipName>
    <type>Lookup</type>
</CustomField>