force-app/main/default/objects/PurchaseOpportunityWork__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <label>商談種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>