force-app/main/default/objects/PurchaseOpportunityWork__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>フェーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>