force-app/main/default/objects/PurchaseOpportunityWork__c/fields/PostProcessing__c.field-meta.xml
<CustomField>
    <fullName>PostProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>後処理</label>
    <type>Checkbox</type>
</CustomField>