force-app/main/default/objects/PurchaseOpportunityWork__c/fields/ProcessingDivision__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision__c</fullName>
    <label>処理区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>