force-app/main/default/objects/PurchaseOpportunityWork__c/fields/PurchaseApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>PurchaseApplicationNo__c</fullName>
    <label>購入申請No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>