force-app/main/default/objects/PurchaseOpportunityWork__c/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <label>買取日</label>
    <type>Date</type>
</CustomField>