force-app/main/default/objects/PurchaseOpportunityWork__c/fields/RepatriationImageCheck__c.field-meta.xml
<CustomField>
    <fullName>RepatriationImageCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>引上時画像チェック</label>
    <type>Checkbox</type>
</CustomField>