force-app/main/default/objects/PurchaseOpportunityWork__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>査定依頼日</label>
    <type>Date</type>
</CustomField>