force-app/main/default/objects/PurchaseOpportunityWork__c/fields/SetupMail__c.field-meta.xml
<CustomField>
    <fullName>SetupMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>段取メール送信済</label>
    <type>Checkbox</type>
</CustomField>