force-app/main/default/objects/PurchaseOpportunityWork__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>振込日</label>
    <type>Date</type>
</CustomField>